syntax = "proto3";
package patchbukkit.events;

import "patchbukkit/common/types.proto";

option java_multiple_files = true;
option java_package = "patchbukkit.events";

message PlayerJoinEvent {
  patchbukkit.common.UUID player_uuid = 1;
  string join_message = 2;
}

message PlayerLeaveEvent {
  patchbukkit.common.UUID player_uuid = 1;
  string leave_message = 2;
}

message PlayerMoveEvent {
  patchbukkit.common.UUID player_uuid = 1;
  patchbukkit.common.Location from = 2;
  patchbukkit.common.Location to = 3;
}

message PlayerChatEvent {
  patchbukkit.common.UUID player_uuid = 1;
  string message = 2;
  repeated patchbukkit.common.UUID recipients = 3;
}

message PlayerCommandEvent {
  patchbukkit.common.UUID player_uuid = 1;
  string command = 2;
}
